fixed spacing inconsistencies

--- a/app/src/components/dropdown-section/dropdownsection.css
+++ b/app/src/components/dropdown-section/dropdownsection.css
@@ -8,30 +8,36 @@
   transition: all .2s;
 }
 
-.section-header {
-  /* display: inline-flex; */
-  color: #3b4151;
-  font-family: sans-serif;
-  font-size: 24px;
-  margin: 0 0 5px;
-  font-weight: bold;
-}
-
 .section-header-div {
+  cursor: pointer;  
   margin: 0 auto;
   max-width: 1460px;
   display: inline-flex;
   width: 100%;
 }
 
+.section-header {
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
+  color: #3b4151;
+  font-family: sans-serif;
+  font-size: 24px;
+  /* margin: 0 0 5px; */
+  font-weight: bold;
+}
+
+.section-header-a {
+  align-items: flex-start;
+}
+
 .section-description {
-  padding: 10px;
+  align-items: center;
   font-size: 14px;
 }
 
 .section-expanded-arrows {
-  display: inline-block; 
-  /* vertical-align: middle; */
+  margin-left: auto;
   max-height: 20px;
   max-width: 20px;
 }
