--- a/app/src/components/header/header.css
+++ b/app/src/components/header/header.css
@@ -15,7 +15,8 @@
 
 .wrapper {
   max-width: 1460px;
-  margin: 1em auto;
+  /* max-height */
+  margin: 0 auto;
 }
 
 .header-nav-wrapper {
@@ -33,6 +34,7 @@
 .search-bar-form {
   display: flex;
   justify-content: flex-end;
+  margin-left: auto;
   height: 40x;
   border-radius: 5%;
   width: max-content;
@@ -44,7 +46,7 @@
   width: 100%;
   flex: 1;
   min-width: 100px;
-  width: 65vw;
+  width: 60vw;
   padding: 8px 10px;
   border: 2px solid #62a03f;
 }
